css-html style.cssは全体にかかわる

--- a/members.html
+++ b/members.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <meta charset="utf-8">
+        <title>show~咲~ 甲陽学院高等学校音楽と展覧の会</title>
+        <meta name = "description" content = "2024年甲陽学院高等学校音楽と展覧の会です。">
+        <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/header.css">
+        <link rel="stylesheet" href="css/footer.css">
+        <link rel="stylesheet" href="css/members.css">
+        <script src = "javascript/countdown.js"></script>
     </head>
     <body>
         <div id="header"></div>
