--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <div id="header"></div>
 
         <main>
-            
+            <div id = "countdown-box">
+                <h1>9.22 SUN</h1>
+                <p>2024音楽と展覧の会まで</p>
+                <span id = "countdown"></span>
+            </div>
         </main>
 
         <div id="footer"></div>
