--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
         <main>
             <div id = "countdown-box">
-                <h1>9.22 SUN</h1>
-                <p>2024音楽と展覧の会まで</p>
+                <h1 id = "data">9.22 SUN</h1>
                 <span id = "countdown"></span>
             </div>
         </main>
