--- a/members.html
+++ b/members.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="ja">
 <html>
     <head>
         <meta charset="utf-8">
@@ -9,7 +10,10 @@
         <link rel="stylesheet" href="css/header.css">
         <link rel="stylesheet" href="css/footer.css">
         <link rel="stylesheet" href="css/members.css">
-        <script src = "javascript/countdown.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="stylesheet" href="css/destyle.css">
+        <link rel="icon" href="images/favicon.png">
     </head>
     <body>
         <div id="header"></div>
