headerリンク乗せた

--- a/header.html
+++ b/header.html
@@ -2,12 +2,12 @@
     <nav class="header__nav header_pc">
         <a href="" class="header__nav_link header_pc header__nav_img"><img src="images/rogo5.png" alt="" class="header__nav_img"></a>
         <div class="header__nav__content">
-            <a href="" class="header__nav__content_link header_pc">企画</a>
-            <a href="" class="header__nav__content_link header_pc">音楽会</a>
-            <a href="" class="header__nav__content_link header_pc">スケジュール</a>
-            <a href="" class="header__nav__content_link header_pc">校内図</a>
-            <a href="" class="header__nav__content_link header_pc">アクセス</a>
-            <a href="" class="header__nav__content_link header_pc">お知らせ</a>
+            <a href="index.html" class="header__nav__content_link header_pc">HOME</a>
+            <a href="circles.html" class="header__nav__content_link header_pc">CIRCLES</a>
+            <a href="timetable.html" class="header__nav__content_link header_pc">TIMETABLE</a>
+            <a href="map.html" class="header__nav__content_link header_pc">MAP</a>
+            <a href="access.html" class="header__nav__content_link header_pc">ACCESS</a>
+            <a href="members.html" class="header__nav__content_link header_pc">MEMBERS</a>
         </div>
         
     </nav>
@@ -17,12 +17,12 @@
     <div id="hamburgermenu">
         <div id="menu-toggle" class="hamburgermenu__icon material-icons"><img src="./images/icon_menu.svg" class="header_sp"></div>
         <nav class="hamburgermenu__nav">
-            <a href="" class="header__nav__content_link header_sp">企画</a>
-            <a href="" class="header__nav__content_link header_sp">音楽会</a>
-            <a href="" class="header__nav__content_link header_sp">スケジュール</a>
-            <a href="" class="header__nav__content_link header_sp">校内図</a>
-            <a href="" class="header__nav__content_link header_sp">アクセス</a>
-            <a href="" class="header__nav__content_link header_sp">お知らせ</a>
+            <a href="index.html" class="header__nav__content_link header_sp">HOME</a>
+            <a href="circles.html" class="header__nav__content_link header_sp">CIRCLES</a>
+            <a href="timetable.html" class="header__nav__content_link header_sp">TIMETABLE</a>
+            <a href="map.html" class="header__nav__content_link header_sp">MAP</a>
+            <a href="access.html" class="header__nav__content_link header_sp">ACCESS</a>
+            <a href="members.html" class="header__nav__content_link header_sp">MEMBERS</a>
         </nav>
         <div id="mask" class="hamburgermenu__mask"></div>
     </div>
