--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <main>
             <div id = "countdown-box">
-                <h1 id = "data">9.22 SUN</h1>
+                <h1 id = "countdown-data">9.22 SUN</h1>
+                <p id = "countdown-title">2024年音楽と展覧の会まで</p>
                 <span id = "countdown"></span>
             </div>
         </main>
