--- a/map.html
+++ b/map.html
@@ -102,7 +102,7 @@
                                                     <h3 class="circle_p_name"><span>講堂</span></h3>
                                                 </div>
                                             </div>
-                                            <div class="map-element" style="top: 0px;left: 23.5%;width: 11.7647%;height: 16%;">
+                                            <div class="map-element" style="top: 0px;left: 23.%;width: 11.7647%;height: 16%;">
                                                 <div class="map-link-name">
                                                     <h3 class="circle_p_name green"><span>案内</span></h3>
                                                 </div>
