--- a/map.html
+++ b/map.html
@@ -59,12 +59,14 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
+                                            <div>
                                             <div class = "map-element seitotou" style="top:0;left:0;width: 84%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element tokubetutou" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element " style="top:80%;left:24%;width: 36%;height:16%;border: 0px;border-bottom: #303030 2px solid;border-right: #303030 2px solid;border-left: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element " style="top:80%;left:65%;width: 25%;height:16%;border: 0px;border-bottom: #303030 2px solid;border-right: #303030 2px solid;border-left: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:20%;left:19%;width: 4%;height:60%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:20%;left:60%;width: 4%;height:60%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:42%;left:10%;width: 9.25%;height:6%;border-right:0px;border-left:0px;background-color: #ffffff;"></div>
                                             <div class = "map-element" style="top: 0px;left: 0;width: 18%;height: 16%;border: 0px;border-bottom: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top: 0px;left: 23%;width: 36%;height: 16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top: 0px;left: 65%;width: 19%;height: 16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -84,7 +86,21 @@
                                             <div class = "map-element" style="top:108%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:110%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:100%;left:60.1%;width: 2%;height:12%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
-
+                                            <div class = "map-element" style="top:0%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:2%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:4%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:6%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:8%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:10%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:18.1%;width: 2.5%;height:14%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:2%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:4%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:6%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:8%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:10%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:59.1%;width: 3%;height:14%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            </div>
                                             <div class="map-felement" style="top:0;left: -18%;width: 20%; height: 20%;">
                                                 <div class="map-link-room"></div>
                                                 <div class="ftext">
@@ -149,6 +165,7 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
+                                            <div>
                                             <div class = "map-element" style="top:0;left:0;width: 84%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:18%;width: 70%;height:16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -173,6 +190,21 @@
                                             <div class = "map-element" style="top:108%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:110%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:100%;left:60.1%;width: 2%;height:12%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:2%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:4%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:6%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:8%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:10%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:18.1%;width: 2.5%;height:14%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:2%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:4%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:6%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:8%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:10%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:59.1%;width: 3%;height:14%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            </div>
                                             <div class="map-felement" style="top:0;left: -18%;width: 20%; height: 20%;">
                                                 <div class="map-link-room"></div>
                                                 <div class="ftext">
@@ -247,6 +279,7 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
+                                            <div>
                                             <div class = "map-element" style="top:0;left:0;width: 84%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:18%;width: 70%;height:16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -271,7 +304,21 @@
                                             <div class = "map-element" style="top:108%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:110%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:100%;left:60.1%;width: 2%;height:12%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
-
+                                            <div class = "map-element" style="top:0%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:2%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:4%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:6%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:8%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:10%;left:18%;width: 5%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:18.1%;width: 2.5%;height:14%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:2%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:4%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:6%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:8%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:10%;left:59%;width: 6%;height:2%;border: 0px;border-bottom: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:0%;left:59.1%;width: 3%;height:14%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            </div>
                                             <div class="map-element" style="top: 0px;left: 23%;width: 12%;height: 16%;">
                                                 <div class="map-link-name">
                                                     <h3 class="circle_p_name"><span>ピタゴラ<br>スイッチ</span></h3>
