--- a/map.html
+++ b/map.html
@@ -59,13 +59,13 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
-                                            <div>
+                                            <div class = "buildings">
                                             <div class = "map-element seitotou" style="top:0;left:0;width: 84%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element tokubetutou" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element " style="top:80%;left:24%;width: 36%;height:16%;border: 0px;border-bottom: #303030 2px solid;border-right: #303030 2px solid;border-left: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element " style="top:80%;left:65%;width: 25%;height:16%;border: 0px;border-bottom: #303030 2px solid;border-right: #303030 2px solid;border-left: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
-                                            <div class = "map-element" style="top:20%;left:19%;width: 4%;height:60%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
-                                            <div class = "map-element" style="top:20%;left:60%;width: 4%;height:60%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
+                                            <div class = "map-element" style="top:19.5%;left:19%;width: 4%;height:61%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: #ffffff;"></div>
+                                            <div class = "map-element" style="top:19.5%;left:60%;width: 4%;height:61%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: #ffffff;"></div>
                                             <div class = "map-element" style="top:42%;left:10%;width: 9.25%;height:6%;border-right:0px;border-left:0px;background-color: #ffffff;"></div>
                                             <div class = "map-element" style="top: 0px;left: 0;width: 18%;height: 16%;border: 0px;border-bottom: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top: 0px;left: 23%;width: 36%;height: 16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -165,7 +165,7 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
-                                            <div>
+                                            <div class = "buildings">
                                             <div class = "map-element" style="top:0;left:0;width: 84%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:18%;width: 70%;height:16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -279,7 +279,7 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
-                                            <div>
+                                            <div class = "buildings">
                                             <div class = "map-element" style="top:0;left:0;width: 84%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:18%;width: 70%;height:16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -430,6 +430,7 @@
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
                                         <div class="booth-container">
+                                            <div class = "buildings">
                                             <div class = "map-element" style="top:80%;left:0;width: 100%;height:20%;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:80%;left:18%;width: 70%;height:16%;border: 0px;border-bottom: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <!-- 渡りさん<div class = "map-element" style="top:20%;left:19%;width: 4%;height:60%;border: 0px;border-left: #303030 2px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
@@ -450,6 +451,7 @@
                                             <div class = "map-element" style="top:108%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:110%;left:60%;width: 4%;height:2%;border: 0px;border-bottom: #303030 1px solid;border-right: #303030 2px solid;background-color: rgba(0,0,0,0);"></div>
                                             <div class = "map-element" style="top:100%;left:60.1%;width: 2%;height:12%;border: 0px;border-right: #303030 1px solid;background-color: rgba(0,0,0,0);"></div>
+                                            </div>
                                             <div class="map-element" style="bottom: 4%;left: 65%;width: 3%;height: 16%;">
                                                 <div class="map-toilet-room" style="writing-mode: vertical-rl;">トイレ女</div>
                                                 <div class="map-link-name"></div>
