--- a/map.html
+++ b/map.html
@@ -54,7 +54,7 @@
                                 </div>
                             </div>
                   
-                            <div id="map-content2" class="map-content">
+                            <div id="map-content2" class="map-content" style = "display: none;">
                                 <div class="map-scroll">
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
@@ -160,7 +160,7 @@
                                 </div>
                             </div>
 
-                            <div id="map-content3" class="map-content">
+                            <div id="map-content3" class="map-content" style = "display: none;">
                                 <div class="map-scroll">
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
@@ -274,7 +274,7 @@
                                 </div>
                             </div>
 
-                            <div id="map-content4" class="map-content">
+                            <div id="map-content4" class="map-content" style = "display: none;">
                                 <div class="map-scroll">
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
@@ -425,7 +425,7 @@
                                 </div>
                             </div>
 
-                            <div id="map-content5" class="map-content">
+                            <div id="map-content5" class="map-content" style = "display: none;">
                                 <div class="map-scroll">
                                     <div class="map-image">
                                         <img src="images/map/4.jpg" class="each-map">
