--- a/members.html
+++ b/members.html
@@ -19,7 +19,176 @@
         <div id="header"></div>
 
         <main>
-            
+            <table>
+                <tr id="member_1" class="a">
+                    <th>委員長</th>
+                </tr>
+                <tr>
+                    <td>小松 冬弥</td>
+                </tr>
+                <tr class="a">
+                    <th>副委員長</th>
+                </tr>
+                <tr>
+                    <td>鏑木 陽斗</td><td>長谷部 佑真</td><td>玉置 健一</td>
+                </tr>
+                <tr class="a">
+                    <th>放送</th>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
+                <tr class="a">
+                    <th>音楽会</th>
+                </tr>
+                <tr>
+                    <td>細見 </td><td>古松 </td>
+                </tr>
+                <tr class="a">
+                    <th>内規</th>
+                </tr>
+                <tr>
+                    <td>永田 </td><td>行平 </td>
+                </tr>
+                <tr class="a">
+                    <th>予算/会計</th>
+                </tr>
+                <tr>
+                    <td>松井 </td>
+                </tr>
+                <tr class="a">
+                    <th>備品管理</th>
+                </tr>
+                <tr>
+                    <td>小松 冬弥</td>
+                </tr>
+                <tr class="a">
+                    <th>黒本</th>
+                </tr>
+                <tr>
+                    <td>玉置 </td>
+                </tr>
+                <tr class="a">
+                    <th>印刷</th>
+                </tr>
+                <tr>
+                    <td>小田 </td><td>横内 </td><td>森 </td>
+                </tr>
+                <tr class="a">
+                    <th>パンフレット</th>
+                </tr>
+                <tr>
+                    <td>安積 </td>
+                </tr>
+                <tr class="a">
+                    <th>受付</th>
+                </tr>
+                <tr>
+                    <td>中島 </td>
+                </tr>
+                <tr class="a">
+                    <th>金券</th>
+                </tr>
+                <tr>
+                    <td>橘 </td>
+                </tr>
+                <tr class="a">
+                    <th>広報</th>
+                </tr>
+                <tr>
+                    <td>鏑木 </td>
+                </tr>
+                <tr class="a">
+                    <th>運動場企画</th>
+                </tr>
+                <tr>
+                    <td>飯田 </td>
+                </tr>
+                <tr class="a">
+                    <th>中央ステージ</th>
+                </tr>
+                <tr>
+                    <td>椿 </td>
+                </tr>
+                <tr class="a">
+                    <th>縁日</th>
+                </tr>
+                <tr>
+                    <td>松井 </td><td>鏑木 </td><td>榎本 </td><td>法貴 </td>
+                </tr>
+                <tr class="a">
+                    <th>クイズ</th>
+                </tr>
+                <tr>
+                    <td>谷本 </td>
+                </tr>
+                <tr class="a">
+                    <th>テーブルゲーム</th>
+                </tr>
+                <tr>
+                    <td>中畠 </td>
+                </tr>
+                <tr class="a">
+                    <th>脱出ゲーム</th>
+                </tr>
+                <tr>
+                    <td>長谷部</td><td>橋本 </td>
+                </tr>            
+                <tr class="a">
+                    <th>ピタゴラスイッチ</th>
+                </tr>
+                <tr>
+                    <td>廣澤 </td><td>今岡 </td>
+                </tr>
+                <tr class="a">
+                    <th>糸電話</th>
+                </tr>
+                <tr>
+                    <td>法貴 </td>
+                </tr>
+                <tr class="a">
+                    <th>高校入試</th>
+                </tr>
+                <tr>
+                    <td>松井 </td><td>楊 </td><td>中島 </td>
+                </tr>
+                <tr class="a">
+                   <th>喫茶</th>
+                </tr>
+                <tr>
+                    <td>横松 </td><td>江原 </td><td>吉川 </td>
+                </tr>
+                <tr class="a">
+                    <th>屋台</th>
+                </tr>
+                <tr>
+                    <td>菱谷 </td><td>北川 </td><td>原 </td><td>今岡 </td>
+                </tr>
+                <tr class="a">
+                    <th>校内装飾</th>
+                </tr>
+                <tr>
+                    <td>鏑木 </td><td>高橋 </td><td>松井 </td><td>安積 </td><td>永田 </td>
+                </tr>
+                <tr class="a">
+                    <th>モニュメント</th>
+                </tr>
+                <tr>
+                    <td>榎本 </td>
+                </tr>
+                <tr class="a">
+                    <th>案内</th>
+                </tr>
+                <tr>
+                    <td>行平 </td><td>檜垣 </td><td>永田 </td><td>玉置 </td><td>法貴 </td>
+                </tr>
+                <tr class="a">
+                    <th>デザイン</th>
+                </tr>
+                <tr>
+                    <td>岡野 </td><td>浅田 </td>
+                </tr>
+            </table>
         </main>
 
         <div id="footer"></div>
