--- a/timetable.html
+++ b/timetable.html
@@ -19,7 +19,17 @@
         <div id="header"></div>
 
         <main>
-            
+            <h1 class = "timetable-title">タイムテーブル</h1>
+            <div class = "timetable-main">
+                <div class = "timetable-header">
+                    <div class = "timetable-location" style = "top:0">講堂</div>
+                </div>
+                <div
+                    <div class = "timetable-container">
+
+                    </div>
+                </div>
+            </div>
         </main>
 
         <div id="footer"></div>
