--- a/map.html
+++ b/map.html
@@ -487,7 +487,7 @@
                             </div>
                         </div>
                         <div style="text-align:center">
-                            <p class="exp">下のパネルでマップ切り替え</p>
+                            <p class="exp"></p>
                         </div>
                         <div class="button-container">
                             <button class="button" onclick="showDiv(1)" id="button1">南1F</button>
