--- a/map.html
+++ b/map.html
@@ -253,9 +253,14 @@
                                                     <h3 class="circle_p_name"><span>中学入試<br>数学同好会</span></h3>
                                                 </div>
                                             </div>
-                                            <div class="map-element" style="bottom: 4%;left: 41%;width: 18%;height: 16%;">
+                                            <div class="map-element" style="bottom: 4%;left: 41%;width: 15%;height: 16%;">
                                                 <div class="map-link-name">
                                                     <h3 class="circle_p_name"><span>縁日</span></h3>
+                                                </div>
+                                            </div>
+                                            <div class="map-element" style="bottom: 4%;left: 56%;width: 3%;height: 16%;">
+                                                <div class="map-link-name">
+                                                    <h3 class="circle_p_name"><span style = "font-size: smaller;">缶サット</span></h3>
                                                 </div>
                                             </div>
                                             <div class="map-element" style="bottom: 0px;right: 0px;width: 12%;height: 20%;">
