--- a/index.html
+++ b/index.html
@@ -20,16 +20,23 @@
                 setTimeout(callback, ms);
             }
             window.onload = function() {
-                var cont = document.getElementById("load-img");
+                var cont = document.getElementById("load-img-pc");
                 cont.style.zIndex = 200000;
                 sleepSetTimeout(6000, () => cont.style.opacity = "0");
                 sleepSetTimeout(9000, () => cont.style.display = "none");
+                var conte = document.getElementById("load-img-phone");
+                conte.style.zIndex = 200000;
+                sleepSetTimeout(6000, () => conte.style.opacity = "0");
+                sleepSetTimeout(9000, () => conte.style.display = "none");
             };
           </script>
     </head>
     <body>
-        <div id = "load-img">
+        <div id = "load-img-pc">
             <video autoplay muted playsinline src="images\0001-0160.mp4" width="100%"height="100%"></video>
+        </div>
+        <div id = "load-img-phone">
+            <video autoplay muted playsinline src="images\for_phone0001-0160.mp4" width="100%"height="100%"></video>
         </div>
         <div id="header"></div>
 
@@ -40,14 +47,13 @@
                 <h1 class = "index-top-data">9.22 SUN</span><br>9:00~15:00</h1>
             </div>
             <div class = "index-countdown-box">
-                <p class = "index-countdown-title">音展2024まで</p>
+                <p class = "index-countdown-title">開催まで</p>
                 <span class = "index-countdown-content"></span>
             </div>
             <div class = "index-message">
                 <h2 class = "index-message-title">あいさつ</h2>
                 <p class = "index-message-content">
-                    　平安時代の頃より、日本人は「花が咲く」というと桜の花を連想してきました。新しい季節の「はじまり」の象徴であるだけでなく、すぐに散ってしまう「はかなさ」を持つ桜の花は今もなお多くの人に愛されており、日本人の心といっても過言ではないでしょう。<br>
-                    　春には桜吹雪が花筏となって流れる夙川の傍に位置する甲陽学院は、そんな桜の花と百年を超える歴史を共に歩んできました。<br>
+                    　平安時代の頃より、日本人は「花が咲く」というと桜の花を連想してきました。新しい季節の「はじまり」の象徴であるだけでなく、すぐに散ってしまう「はかなさ」を持つ桜の花は今もなお多くの人に愛されており、日本人の心といっても過言ではないでしょう。春には桜吹雪が花筏となって流れる夙川の傍に位置する甲陽学院は、そんな桜の花と百年を超える歴史を共に歩んできました。<br>
                     　我々が入学した頃には猛威を振るっていた感染症もすっかり下火となった今日が、音展にたった一瞬の「はかなさ」を持つ青春を燃やす甲陽生、音展を成功へと結んでくださるご来場の皆様、そして長きにわたり甲陽生と共に歩んできた先生方が一緒に笑顔を咲かせる「はじまり」の一日になれば幸いです。<br>
                     　どうぞ、お楽しみください。
                 </p>
