--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <main>
             <div class = "index-top">
                 <img src = "images\rogo5.png" class = "index-top-img">
-                <h1 class = "index-top-title">第77回<br>甲陽学院高等学校　音楽と展覧の会</h1>
+                <h1 class = "index-top-title">第77回<br>甲陽学院高等学校<br>音楽と展覧の会</h1>
                 <h1 class = "index-top-data">9.22 SUN</span><br>9:00~15:00</h1>
             </div>
             <div class = "index-countdown-box">
@@ -51,7 +51,7 @@
                 <span class = "index-countdown-content"></span>
             </div>
             <div class = "index-message">
-                <h2 class = "index-message-title">あいさつ</h2>
+                <h2 class = "index-message-title">挨拶</h2>
                 <p class = "index-message-content">
                     　平安時代の頃より、日本人は「花が咲く」というと桜の花を連想してきました。新しい季節の「はじまり」の象徴であるだけでなく、すぐに散ってしまう「はかなさ」を持つ桜の花は今もなお多くの人に愛されており、日本人の心といっても過言ではないでしょう。春には桜吹雪が花筏となって流れる夙川の傍に位置する甲陽学院は、そんな桜の花と百年を超える歴史を共に歩んできました。<br>
                     　我々が入学した頃には猛威を振るっていた感染症もすっかり下火となった今日が、音展にたった一瞬の「はかなさ」を持つ青春を燃やす甲陽生、音展を成功へと結んでくださるご来場の皆様、そして長きにわたり甲陽生と共に歩んできた先生方が一緒に笑顔を咲かせる「はじまり」の一日になれば幸いです。<br>
